syntax = "proto3";

package message.v1;

option go_package = "github.com/dietzy1/chatapp/services/message/proto/message/v1;messagev1";




service MessageService {
rpc CreateMessage(CreateMessageRequest) returns (CreateMessageResponse) {}
rpc GetMessage(GetMessageRequest) returns (GetMessageResponse) {}
rpc EditMessage(EditMessageRequest) returns (EditMessageResponse) {}
rpc DeleteMessage(DeleteMessageRequest) returns (DeleteMessageResponse) {}
}

message CreateMessageRequest {
string author = 1;
string content = 2;
string author_uuid = 3;
string chat_room_uuid = 4;
string timestamp = 5;
}

message CreateMessageResponse {
string error = 1;
}

message GetMessageRequest {
string chat_room_uuid = 1;
}

message GetMessageResponse {
string author = 1;
string content = 2;
string author_uuid = 3;
string chat_room_uuid = 4;
string timestamp = 5;
}

message EditMessageRequest {
string author = 1;
string content = 2;
string author_uuid = 3;
string chat_room_uuid = 4;
string timestamp = 5;
}

message EditMessageResponse {
string status = 1;
string error = 2;
}

message DeleteMessageRequest {
string author = 1;
string content = 2;
string author_uuid = 3;
string chat_room_uuid = 4;
string timestamp = 5;
}

message DeleteMessageResponse {
string status = 1;
string error = 2;
}








